# segbot_rocon

./: .gitignore  README.md
bwi_guidance_concert/: CMakeLists.txt  package.xml
bwi_guidance_concert/concert/: guidance.concert  guidance_gazebo.concert
bwi_guidance_concert/launch/: controller.launch  experiment.launch  real_segbot.launch
bwi_guidance_concert/rapps/guidance/: guidance.interface  guidance.launch  guidance.rapp
bwi_guidance_concert/rapps/segbot_video/: segbot_video.interface  segbot_video.launch  segbot_video.rapp
bwi_guidance_concert/scripts/: acquire_robots  gazebo  server
bwi_guidance_concert/services/gazebo/: gazebo.launch  gazebo.parameters  gazebo.service
bwi_guidance_concert/services/guidance/: guidance.launch  guidance.service
bwi_guidance_concert/services/guidance_gazebo/: guidance_gazebo.launch  guidance_gazebo.service
bwi_guidance_concert/services/guidance_real/: guidance_real.service
bwi_guidance_concert/services/server/: server.launch  server.parameters  server.service
bwi_guidance_concert/solutions/: concert.launch  guidance.services  guidance_gazebo.services
bwi_guidance_concert/solutions/parameters/: gazebo.parameters  segbot_requestor.parameters
bwi_task_planning/: CMakeLists.txt  package.xml
bwi_task_planning/concert/: task_planning_gazebo.concert
bwi_task_planning/rapps/guidance/: guidance.launch
bwi_task_planning/services/guidance_gazebo/: guidance_gazebo.launch  guidance_gazebo.service
bwi_task_planning/services/guidance_real/: guidance_real.launch
bwi_task_planning/solutions/: guidance.services  task_planning_gazebo.services
bwi_task_planning/solutions/parameters/: gazebo.parameters  real_segbot_requestor.parameters  segbot_requestor.parameters
concert_service_gazebo_segbot/: CMakeLists.txt  package.xml  setup.py
concert_service_gazebo_segbot/concert/: gazebo.concert
concert_service_gazebo_segbot/launch/: robot.launch  segbot_empty_world.launch
concert_service_gazebo_segbot/launch/turtlebot/: turtlebot.launch
concert_service_gazebo_segbot/scripts/: gazebo_segbot_manager
concert_service_gazebo_segbot/services/segbot/: segbot.launch  segbot.parameters  segbot.service
concert_service_gazebo_segbot/services/turtlebot/: turtlebot.launch  turtlebot.parameters  turtlebot.service
concert_service_gazebo_segbot/solutions/: concert.launch  gazebo.services
concert_service_gazebo_segbot/src/concert_service_gazebo/: __init__.py  gazebo_robot_manager.py
concert_service_gazebo_segbot/src/concert_service_gazebo_segbot/: __init__.py  gazebo_segbot_manager.py
concert_service_gazebo_segbot/test/: test_gazebo_gateway.launch  test_gazebo_segbot_manager.launch  test_multiple_segbots.launch  test_multiple_turtlebots.launch
segbot_concert_services/: .project  CMakeLists.txt  package.xml  plugin.xml  setup.py
segbot_concert_services/concert/: multi_robot_passer.concert  multi_robot_passer_gazebo.concert  segbot_gazebo_demo.concert
segbot_concert_services/launch/: concert.launch  real_segbot.launch
segbot_concert_services/maps/: empty_world.multimap.yaml
segbot_concert_services/maps/empty_world/: doors_map.yaml
segbot_concert_services/msg/: AvailableRobotArray.msg
segbot_concert_services/robots/segbot/: segbot.concert_gazebo  segbot.launch
segbot_concert_services/scripts/: multi_robot_passer_gui  multi_robot_patroller  segbot_requestor
segbot_concert_services/services/multi_robot_passer/: multi_robot_passer.launch  multi_robot_passer.parameters  multi_robot_passer.service
segbot_concert_services/services/multi_robot_patroller/: multi_robot_patroller.launch  multi_robot_patroller.parameters  multi_robot_patroller.service
segbot_concert_services/services/segbot_gazebo/: segbot_gazebo.parameters  segbot_gazebo.service
segbot_concert_services/services/segbot_requestor/: segbot_requestor.interactions  segbot_requestor.launch  segbot_requestor.parameters  segbot_requestor.service
segbot_concert_services/solutions/: multi_robot_passer.services  multi_robot_passer_gazebo.services  multi_segbot_passer_gazebo.services  segbot_gazebo_demo.services
segbot_concert_services/solutions/multi_robot_passer/: multi_robot_passer_segbot_requestor.parameters
segbot_concert_services/solutions/multi_robot_passer_gazebo/: multi_robot_passer_gazebo_patroller.parameters  multi_robot_passer_gazebo_segbot_gazebo.parameters  multi_robot_passer_gazebo_segbot_requestor.parameters
segbot_concert_services/src/nodes/: multi_robot_navigator.cpp  multi_robot_passer.cpp
segbot_concert_services/src/segbot_concert_services/: plugins.py
segbot_concert_services/src/segbot_navigation_concert/: plugins.py
segbot_demo_concert/: .project  CMakeLists.txt  package.xml
segbot_demo_concert/concert/: demo.concert  simulated_demo.concert
segbot_demo_concert/scripts/: multi_robot_navigation  segbot_demo_controller
segbot_demo_concert/services/gazebo/: gazebo.launch  gazebo.parameters  gazebo.service
segbot_demo_concert/services/multi_robot_navigation/: multi_robot_navigation.interactions  multi_robot_navigation.launch  multi_robot_navigation.service
segbot_demo_concert/services/segbot_demo_controller/: segbot_demo_controller.interactions  segbot_demo_controller.launch  (+1 more)
segbot_demo_concert/solutions/: concert.launch  demo.services  gazebo_demo.services
segbot_gazebo_concert/: .project  CMakeLists.txt  package.xml
segbot_gazebo_concert/maps/: multimap.yaml
segbot_gazebo_concert/scripts/: segbot_pond  segbot_stroll
segbot_gazebo_concert/solutions/: concert.launch  gazebo.services
segbot_navigation_concert/: .project  CMakeLists.txt  package.xml
segbot_navigation_concert/concert/: demo.concert  simulated_demo.concert
segbot_navigation_concert/scripts/: multi_robot_navigation  random_navigator
segbot_navigation_concert/solutions/: concert.launch  demo.services  gazebo_demo.services
segbot_rapps/: CMakeLists.txt  package.xml
segbot_rapps/rapps/: nav.rapp  simulated_segbot_nav.interface  simulated_segbot_nav.launch  simulated_segbot_nav_3ne.launch  simulated_segbot_nav_3ne.rapp
(+54 files in other folders)
