<?xml version="1.0"?>
<package>

  <name>bwi_guidance_concert</name>
  <version>0.0.0</version>
  <description>The bwi_guidance_concert package</description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_service_gazebo</run_depend>
  <run_depend>concert_service_segbot_gazebo</run_depend>
  <run_depend>bwi_guidance_solver</run_depend>

  <export>
    <rocon_app>rapps/segbot_video/segbot_video.rapp</rocon_app>
    <concert_service>services/server/server.service</concert_service>
  </export>

</package>
