<?xml version="1.0"?>
<package>

  <name>bwi_task_planning</name>
  <version>0.0.0</version>
  <description>
  Some text
  </description>

  <maintainer email="shiqi.zhang6@gmail.com">Shiqi Zhang</maintainer>

  <license>BSD</license>

  <author email="shiqi.zhang6@gmail.com">Shiqi Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend> <!-- unit test only -->

  <run_depend>concert_master</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>concert_scheduler_requests</run_depend>
  <run_depend>concert_service_admin</run_depend>
  <run_depend>concert_service_gazebo</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>rocon_uri</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>segbot_concert_services</run_depend>

  <!-- Dependencies required for running a concert on Ubuntu -->
  <run_depend>zeroconf_avahi</run_depend>
  <run_depend>zeroconf_msgs</run_depend>

</package>
