<package>
  <name>concert_service_gazebo_segbot</name>
  <version>0.1.0</version>
  <description>
    Instantiates the Gazebo Robot Service (concert_service_gazebo) for spawing/killing Segbot robots as concert clients.
  </description>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/concert_service_gazebo_segbot</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_rocon</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_rocon/issues</url>

  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_service_gazebo</run_depend>
  <run_depend>concert_service_utilities</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>segbot_gazebo</run_depend>

  <export>
    <concert_service>services/segbot/segbot.service</concert_service>
  </export>

</package>
