<package>
  <name>segbot_gazebo_concert</name>
  <version>0.0.0</version>
  <description>
    A simple software concert describing how multiple robots launched in
    simulation can be used by the concert framework. This package follows the
    same pattern as turtle_concert.
  </description>

  <maintainer email="piyushk@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_gazebo_concert</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tutorials</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tutorials/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_master</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>concert_scheduler_requests</run_depend>
  <run_depend>concert_service_admin</run_depend>
  <run_depend>concert_service_segbot_gazebo</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>rocon_uri</run_depend>
  <run_depend>rospy</run_depend>

  <!-- Dependencies required for running a concert on Ubuntu -->
  <run_depend>zeroconf_avahi</run_depend> 
  <run_depend>zeroconf_msgs</run_depend>

  <export>
    <rocon_app>rapps/segbot_stroll/segbot_stroll.rapp</rocon_app>
    <concert_service>services/segbot_pond/segbot_pond.service</concert_service>
    <concert_service>services/segbot_gazebo/segbot_gazebo.service</concert_service>
  </export>

</package>
