<?xml version="1.0"?>
<package>
  <name>segbot_rapps</name>
  <version>0.0.0</version>
  <description>The segbot_rapps package</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_rapps</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_rocon.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_rocon/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
